contact, catalog pages was add

--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -36,12 +36,12 @@
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5>Контакты</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="link-secondary" href="#">Team</a></li>
-          <li><a class="link-secondary" href="#">Locations</a></li>
-          <li><a class="link-secondary" href="#">Privacy</a></li>
-          <li><a class="link-secondary" href="#">Terms</a></li>
+          <li>+38 44 762 8322</li>
+          <li class="link-secondary">Пр-т. Барыкина 28</li>
+          <li class="link-secondary">ММ354214524</li>
+          <li class="link-secondary">Генадий Дудка</li>
         </ul>
       </div>
     </div>
