--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -4,8 +4,8 @@
 <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
     <div class="w3-row-padding">
       <div class="w3-col s4">
-        <h4>Контакт</h4>
-        <p>Вопросы? Пишите здесь.</p>
+        <h4>Для вопросов</h4>
+        <p>Пишите здесь.</p>
         <form action="/action_page.php" target="_blank">
           <p><input class="w3-input w3-border" type="text" placeholder="Имя" name="Name" required></p>
           <p><input class="w3-input w3-border" type="text" placeholder="Почта" name="Email" required></p>
