--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,11 +6,11 @@
   <div class="w3-row w3-grayscale">
     <div class="w3-col l3 s6">
       <div class="w3-container">
-        <img src="/w3images/jeans1.jpg" style="width:100%">
+        <img src="web/photos/head_image.jpg" style="width:100%">
         <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
       </div>
       <div class="w3-container">
-        <img src="/w3images/jeans2.jpg" style="width:100%">
+        <img src="web/photos/head_image.jpg" style="width:100%">
         <p>Mega Ripped Jeans<br><b>$19.99</b></p>
       </div>
     </div>
@@ -18,10 +18,10 @@
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <div class="w3-display-container">
-          <img src="/w3images/jeans2.jpg" style="width:100%">
-          <span class="w3-tag w3-display-topleft">New</span>
+          <img src="web/photos/head_image.jpg" style="width:100%">
+          <span class="w3-tag w3-display-topleft">Новое</span>
           <div class="w3-display-middle w3-display-hover">
-            <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
+            <button class="w3-button w3-black"> Купить <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
         <p>Mega Ripped Jeans<br><b>$19.99</b></p>
@@ -40,9 +40,9 @@
       <div class="w3-container">
         <div class="w3-display-container">
           <img src="/w3images/jeans4.jpg" style="width:100%">
-          <span class="w3-tag w3-display-topleft">Sale</span>
+          <span class="w3-tag w3-display-topleft">Распродажа</span>
           <div class="w3-display-middle w3-display-hover">
-            <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
+            <button class="w3-button w3-black"> Купить <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
         <p>Vintage Skinny Jeans<br><b class="w3-text-red">$14.99</b></p>
