--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
       Шлемы <i class="fa fa-caret-down"></i>
     </a>
     <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
-      <a href="/createProduct">Создать продукт</a>
+      <a href="/createProduct" class="w3-bar-item w3-button">Создать продукт</a>
       <a href="#" class="w3-bar-item w3-button">Шлемы</a>
       <a href="#" class="w3-bar-item w3-button">Подшлемники</a>
       <a href="#" class="w3-bar-item w3-button">Аксессуары</a>
@@ -72,8 +72,6 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-display-container w3-container">
     <img src="web/photos/head_image.jpg" alt="Jeans" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
-      <h1 class="w3-jumbo w3-hide-small">New arrivals</h1>
-      <h1 class="w3-hide-large w3-hide-medium">New arrivals</h1>
     </div>
   </div>
 
